steps to save results

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,10 @@ jobs:
     - run: pipenv install --python `which python`
     - name: Run scraper
       run: pipenv run jupyter execute mpd_cad_scrape.ipynb
-      
+    - name: Add and commit 
+      run: |-
+        git add .
+        git status
+        git commit -m "Latest data"
+    - name: Push
+      run: git push
