--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Scrape
 
 on:
   schedule:
-    - cron: "0 */1 * * *" #top of every hour
+    #- cron: "0 */1 * * *" #top of every hour
   workflow_dispatch:
 
 jobs: 
