--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -10,7 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
     - name: dependencies
       run: make dependencies
+    
     - name: download data
       run: make download
+
+    - name: Add and commit
+        id: add_commit
+        uses: EndBug/add-and-commit@v8
+        with:
+          committer_name: Automated
+          committer_email: actions@users.noreply.github.com
+          message: "Data Updated"
+    - name: Push	
+      run: git push
